--- a/docs/styles.css
+++ b/docs/styles.css
@@ -1,6 +1,6 @@
 body {
     background: #B3E1D7;
-    margin: 100px;
+    margin: 10%;
     font-family: sans-serif;
 }
 body > img {
@@ -41,9 +41,12 @@ p {
 .half-row > img {
 	background: rgba(39,62,84,0.82);
     height: 100%;
+    width: 80%;
     filter: drop-shadow(0px 0px 0px);
     transition: all .35s;
     opacity: 0.3;
+transform: rotate(90deg);
+
 }
 .half-row > img:hover {
     filter: drop-shadow(15px 15px 15px #222);
